# gdserial

./: .gitignore  Cargo.toml
addons/gdserial/: gdserial.gdextension  plugin.cfg
src/: lib.rs
