[package]
name = "gdserial"
version = "0.4.0-spampi"
edition = "2021"
description = "Serial communication library for Godot 4 with PySerial-like API - Arduino, sensors, IoT integration"
license = "MIT"
repository = "https://github.com/marcospampi/gdserial"
keywords = [
    "godot",
    "serial",
    "arduino",
    "iot",
    "communication",
    "gamedev",
    "sensors",
]
categories = ["game-development", "hardware-support", "api-bindings"]
authors = ["Sujith Christopher"]

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.5.0", features = ["experimental-threads", "register-docs"] }
godot-macros = "0.5.1"
litrs = "=1.0.0"
serialport = "4.9.0"

[profile.release]
opt-level = 3   # Maximum optimization
lto = "fat"     # Aggressive link-time optimization
strip = true    # Strip debug symbols
panic = "abort" # Slightly faster
